--- a/small.sass
+++ b/small.sass
@@ -5,8 +5,10 @@
 
 body
     background-color: grey
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif
     scroll-behavior: smooth
+
+.popUpAboutUs
 
 .wrapper
     display: flex
@@ -83,14 +85,13 @@ body
             i
                 padding: 0px 15px
 
+.menuLabel:hover + .collapseMenu
+    left: 0
 
 // .collapseMenu .nav:hover
 // .nav:hover + .collapseMenu
 //     left: 0
 //     align-self: flex-end
-
-.nav:hover > .collapseMenu
-    left: 0
 
 // hover to test
 
@@ -108,7 +109,7 @@ body
     justify-content: center
     position: relative
     width: 100%
-    height: 400px
+    height: 100vh
     background-image: url(/imgs/headerSmall2.jpg)
     // background-color: black
     background-position: center
@@ -117,26 +118,23 @@ body
     background-attachment: fixed
     z-index: 0
 
-    h1, h3
+    h1
         color: white 
         text-align: center
         text-transform: uppercase
         letter-spacing: 2px
         font-size: 24px
-
-    h3
-        letter-spacing: 1px
-        font-size: 16px
-        padding: 0px 20px
     
     span
         color: white
         text-align: center
-        font-size: 14px
-        padding: 25px
+        font-size: 16px
+        margin-bottom: 50px
         font-family: "Montserrat", cursive
 
-.articlesListSection, .currentArticleSection, .trainingsSection, .calculatorSection
+
+// .articlesListSection, .currentArticleSection, .trainingsSection, .calculatorSection
+section
     display: flex
     flex-direction: column
     height: 100%
@@ -144,6 +142,27 @@ body
     background-color: black
     background-position: center
     background-size: cover
+
+    .desrciption, .activeQuote
+        margin: 10px 30px
+
+    .allQuotes
+        display: none
+
+    .activeQuote
+        text-align: center
+
+        a
+            font-size: 14px
+
+        .quoteContainer
+            display: flex
+            flex-direction: column
+            margin: 10px 0
+
+            .quoteAuthor
+                padding: 15px 0px 5px 0px
+                font-size: 14px
 
     h3
         padding: 30px 0px 20px 0px
@@ -195,6 +214,15 @@ body
                 border-bottom: 1px solid grey
             span
                 font-size: 14px
+
+.about
+    .footerIcons
+        margin: 10px auto 20px auto
+    .icon
+        padding: 0 15px
+        font-size: 30px
+        text-decoration: none
+        color: whitesmoke
 
 .firstArticle
     background-image: url(/imgs/article_zmeczenie.jpg)
@@ -277,8 +305,6 @@ body
                     letter-spacing: 1px
 
 .trainingsSection, .calculatorSection
-    .desrciption
-        margin: 10px 30px
 
     .trainingsCards
         display: flex
@@ -379,9 +405,74 @@ body
 
                     .kcalInputContainer
                         display: grid
-                        grid-template-columns: 6fr 1fr
-                        padding: 10px
+                        grid-template-columns: 1fr 1fr
+                        width: 100%
+                        justify-items: center
+                        padding: 20px
 
+                        .kcalQuestion
+                            align-self: center
+                            justify-self: center
+
+                        .kcalInput
+                            width: 50px
+                            background: none
+                            border: none
+                            border-bottom: 2px solid grey
+                            color: white
+
+                        .activityContainer
+                            .activity-form
+                                background: black
+                                border: none
+                                text-align: center
+                                color: white
+                                width: 110%
+                                font-size: 14px                 
+
+                        .kcalInput:focus
+                            outline: none
+                            border-bottom: 2px solid white
+                            transition: 0.2s
+                            z-index: 1
+
+                        input::-webkit-outer-spin-button,
+                        input::-webkit-inner-spin-button
+                            -webkit-appearance: none
+                            margin: 0
+
+                        input[type=number]
+                            -moz-appearance: textfield
+
+
+        .allCalcs
+            display: none
+
+// [aria-label]
+//     position: relative
+
+//     [aria-label="activity-select"]:after
+//         content: attr(aria-label)
+//         display: none
+//         position: absolute
+//         top: 110%
+//         left: 10px
+//         z-index: 5000
+//         pointer-events: none
+//         padding: 8px 10px
+//         line-height: 15px
+//         white-space: nowrap
+//         text-decoration: none
+//         text-indent: 0
+//         overflow: visible
+//         font-size: .9em
+//         font-weight: normal
+//         color: #fff
+//         text-shadow: 1px 0 1px #888
+//         background-color: #412917
+//         border-left: 6px solid #d37092
+//         border-radius: 2px
+//         box-shadow: 1px 2px 6px rgba(0,0,0,0.3)
 
 .footer
     display: flex
@@ -394,14 +485,6 @@ body
 
     .copyright
         margin: 0 10px
-
-    .footerIcons
-        margin: 0 10px
-        .icon
-            padding: 0 5px
-            font-size: 24px
-            text-decoration: none
-            color: whitesmoke
 
 
 // .dropdown-menu
