--- a/medium.css
+++ b/medium.css
@@ -1,1 +1,386 @@
-/* No CSS *//*# sourceMappingURL=medium.css.map */
+body p {
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+body .nav .menuLabel .menuBars i {
+  font-size: 30px;
+}
+
+body .nav .menuLabel .logo a {
+  font-size: 26px;
+}
+
+body .nav .menuLabel .logo img {
+  height: 35px;
+}
+
+body .collapseMenu ul li {
+  padding: 20px 20px 20px 0px;
+  font-size: 20px;
+  letter-spacing: 4px;
+}
+
+body .collapseMenu ul li i {
+  font-size: 22px;
+}
+
+.wrapper {
+  background-position: center;
+}
+
+.wrapper .scroll-fix::before {
+  content: '';
+  display: block;
+  height: 124px;
+  margin-top: -66px;
+}
+
+.wrapper .header {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.wrapper .header h1 {
+  font-size: 60px;
+}
+
+.wrapper .header span {
+  font-size: 24px;
+}
+
+.large-margin-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+section .activeQuote {
+  min-height: 280px;
+}
+
+section .activeQuote .quoteContainer span {
+  font-size: 50px;
+}
+
+section {
+  max-width: 1000px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+section .activeQuote {
+  margin-left: 50px;
+  margin-right: 50px;
+  min-height: 350px;
+}
+
+section .description {
+  margin: 30px 50px;
+}
+
+section .headerTitles {
+  font-size: 22px;
+  letter-spacing: 4px;
+}
+
+.articlesListSection .activeArticle .articleDetailsContainer .articleAuthor, .articlesListSection .activeArticle .articleDetailsContainer .articleDate {
+  font-size: 16px;
+}
+
+.trainingsSection .trainingsCards .training p {
+  padding: 0 30px 0 30px;
+}
+
+.trainingsSection .trainingsCards .training .trainingMovies a i {
+  font-size: 60px;
+}
+
+.trainingsSection .trainingsCards .training .trainingMovies a span {
+  font-size: 18px;
+  width: 250px;
+}
+
+.trainingsSection .trainingsCards .training .extendTraining .backgroundTrainig h3 {
+  padding: 0;
+  font-size: 40px;
+}
+
+.dietSection .dietContainer {
+  margin: auto;
+}
+
+.calculatorSection .calculator .dropdownCalculator {
+  width: 380px;
+  max-height: 60px;
+}
+
+.calculatorSection .calculator .dropdownCalculator h5 {
+  font-size: 22px;
+  letter-spacing: 6px;
+}
+
+.calculatorSection .calculator .dropdownCalculator ul li {
+  font-size: 20px;
+}
+
+.calculatorSection .calculator .activeCalc .calc .calcInputs {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  grid-templare-rows: 1fr 1fr 1fr 1fr;
+}
+
+.calculatorSection .calculator .activeCalc .calc .calcInputs .detailsInfoContainer {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-row: 3;
+  grid-row: 3;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+.calculatorSection .calculator .activeCalc .calc .calcInputs .calcResultBtn {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+}
+
+.calculatorSection .calculator .activeCalc .calc .calcInputs .result {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+}
+
+.calculatorSection .calculator .activeCalc .bmi .calcInputs, .calculatorSection .calculator .activeCalc .ymca .calcInputs {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr 1fr;
+}
+
+.calculatorSection .calculator .activeCalc .bmi .calcInputs .genderContainer, .calculatorSection .calculator .activeCalc .ymca .calcInputs .genderContainer {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-row: 1;
+  grid-row: 1/1;
+}
+
+.calculatorSection .calculator .dropdownHeightChange {
+  max-height: 250px;
+}
+
+.footer h3 {
+  font-size: 18px;
+}
+
+.footer .footerIcons .icon {
+  font-size: 32px;
+  margin: 10px;
+}
+
+@media (min-width: 668px) {
+  .calculatorSection .calculator .activeCalc .calc .calcInputs {
+    margin: auto;
+  }
+  section .activeQuote {
+    min-height: 300px;
+  }
+}
+
+@media (min-width: 800px) {
+  section .activeQuote {
+    min-height: 280px;
+  }
+  .articlesListSection .articlesPagesContainer {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+  }
+  .articlesListSection .articlesPagesContainer .articlesFirstPage {
+    margin-left: 10px;
+  }
+  .articlesListSection .articlesPagesContainer .articlesSecondPage {
+    margin-left: -10px;
+  }
+  .articlesListSection .articlesPagesContainer .pageArticle {
+    display: block;
+    position: relative;
+    opacity: 1;
+  }
+  .articlesListSection .paginationArticles .pagination .page-item .blocked {
+    position: absolute;
+    width: 60px;
+    height: 50px;
+    opacity: 0;
+    cursor: not-allowed;
+    z-index: 100;
+  }
+  .articlesListSection .paginationArticles .pagination .page-item .pagePrevious, .articlesListSection .paginationArticles .pagination .page-item .pageTwo, .articlesListSection .paginationArticles .pagination .page-item .pageNext {
+    color: gray;
+  }
+}
+
+@media (min-width: 1090px) {
+  body .nav .collapseMenu {
+    display: none;
+  }
+  body .nav .menuLabel {
+    -ms-grid-columns: 5fr 1fr;
+        grid-template-columns: 5fr 1fr;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    height: 80px;
+    overflow: hidden;
+  }
+  body .nav .menuLabel .menuBars {
+    display: none;
+  }
+  body .nav .menuLabel .menuLabelBig {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+    max-width: 900px;
+    margin: 0 0 0 15px;
+    background-color: #000000;
+    z-index: 10;
+  }
+  body .nav .menuLabel .menuLabelBig .menuLink {
+    background-color: rgba(0, 0, 0, 0);
+    min-height: 75px;
+    text-decoration: none;
+    color: whitesmoke;
+    text-transform: uppercase;
+    font-size: 20px;
+    letter-spacing: 4px;
+    padding: 50px 16px;
+    overflow: hidden;
+    -webkit-transition: color 0.2s, text-shadow 0.2s, background 0.2s;
+    transition: color 0.2s, text-shadow 0.2s, background 0.2s;
+  }
+  body .nav .menuLabel .menuLabelBig .menuLink:hover {
+    background: #d5d838;
+    color: black;
+    text-shadow: 0 0 1px black, 0 0 1px black;
+  }
+  body .nav .menuLabel .menuLabelBig .menuLinkActive {
+    color: #d5d838;
+    text-shadow: 0 0 2px black, 0 0 2px #d5d838;
+  }
+  body .wrapper .scroll-fix::before {
+    content: '';
+    display: block;
+    height: 150px;
+    margin-top: -75px;
+  }
+  body .wrapper .header h1 {
+    font-size: 80px;
+    font-weight: bolder;
+  }
+  body .wrapper .header span {
+    font-size: 28px;
+  }
+  body .wrapper .header .hero-shadow-header {
+    background: none;
+  }
+  body .wrapper .articlesListSection .articlesPagesContainer .pageArticle a .artCard {
+    background-size: 100%;
+    -webkit-transition: background-size 0.5s;
+    transition: background-size 0.5s;
+  }
+  body .wrapper .articlesListSection .articlesPagesContainer .pageArticle a .artCard .textCard span {
+    font-size: 16px;
+  }
+  body .wrapper .articlesListSection .articlesPagesContainer .pageArticle a .artCard:hover {
+    background-size: 125%;
+  }
+  body .wrapper .dietSection .dietContainer {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    max-width: 900px;
+    overflow: hidden;
+    margin: 20px auto;
+    padding: 0;
+  }
+  body .wrapper .dietSection .dietContainer a {
+    cursor: pointer;
+  }
+  body .wrapper .dietSection .dietContainer a .dietCard {
+    background-size: 800px;
+    min-width: 150px;
+    -webkit-transition: min-width 1s ease-out;
+    transition: min-width 1s ease-out;
+    overflow: hidden;
+  }
+  body .wrapper .dietSection .dietContainer a .dietCard .textDietHeader {
+    overflow: hidden;
+  }
+  body .wrapper .dietSection .dietContainer a .dietCard .textDietHeader .dietText {
+    opacity: 1;
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.4s ease-out;
+    transition: opacity 0.5s, -webkit-transform 0.4s ease-out;
+    transition: opacity 0.5s, transform 0.4s ease-out;
+    transition: opacity 0.5s, transform 0.4s ease-out, -webkit-transform 0.4s ease-out;
+    padding: 0;
+    letter-spacing: 0;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  body .wrapper .dietSection .dietContainer a .dietCard .textDietHeader .dietTextHide {
+    opacity: 0;
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.4s ease-out;
+    transition: opacity 0.5s, -webkit-transform 0.4s ease-out;
+    transition: opacity 0.5s, transform 0.4s ease-out;
+    transition: opacity 0.5s, transform 0.4s ease-out, -webkit-transform 0.4s ease-out;
+    overflow: hidden;
+  }
+  body .wrapper .dietSection .dietContainer .modalOwnLink:hover .modalOwn {
+    min-width: 750px;
+  }
+  body .wrapper .dietSection .dietContainer .modalOwnLink:hover .dietText {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  body .wrapper .dietSection .dietContainer .redirectLink:hover .redirect {
+    min-width: 750px;
+  }
+  body .wrapper .dietSection .dietContainer .redirectLink:hover .dietText {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+}
+
+@media (min-width: 1200px) {
+  body .wrapper .header h1 {
+    font-size: 100px;
+    font-weight: bolder;
+  }
+  body .wrapper .header span {
+    font-size: 30px;
+  }
+}
+/*# sourceMappingURL=medium.css.map */
