--- a/small.sass
+++ b/small.sass
@@ -387,16 +387,17 @@ body
             letter-spacing: 2px
             box-shadow: 0px 5px 3px #292929
 
-        .generatePDFBtn:active
-            box-shadow: 0px 2px 3px #292929
-            transform: translateY(2px)
+        // to be added:
 
-        .inactiveBtn
-            border: 1px solid #797979
-            color: #797979
+        // .generatePDFBtn:active
+        //     box-shadow: 0px 2px 3px #292929
+        //     transform: translateY(2px)
+
+        // .inactiveBtn
+        //     border: 1px solid #797979
+        //     color: #797979
 
     .errorShadow
-        // display: none
         position: fixed
         top: auto
         background: rgba(0,0,0,0.5)
