--- a/small.sass
+++ b/small.sass
@@ -22,6 +22,9 @@ body
     font-family: 'Montserrat', sans-serif
     scroll-behavior: smooth
 
+    h1, h2, h3, p
+        color: whitesmoke
+
     .modalDietContainer
         display: flex
         flex-direction: column
@@ -80,8 +83,6 @@ body
 
         h2, p, #dietInput
             text-align: center
-            padding: 20px 20px 20px 20px
-            color: whitesmoke
 
         h2
             padding: 30px 60px 10px 60px
@@ -407,15 +408,16 @@ body
         visibility: hidden
         opacity: 0
         transition: visibility 0s, opacity 0.9s 0.1s
+
     .errorShadowShow
-        // display: block
         visibility: visible
         opacity: 1
+
     .errorShadowClose
-        // display: block
         visibility: hidden
         opacity: 0
         transition: visibility 1.1s, opacity 0.9s 0.1s
+
     .errorPopUp
         position: fixed
         height: 180px
@@ -442,22 +444,18 @@ body
         font-family: 'Montserrat', sans-serif
 
         .errorMsg, .errorConfirm
-            // position: absolute
             color: #111111
+
         .errorMsg
             position: relative
             font-size: 20px
             top: -15px
-            // top: 50px
             font-weight: bolder
             letter-spacing: 1px
             padding: 10px
-            // margin-bottom: 20px
-            // margin: auto
             text-align: center
 
         .errorConfirm
-            // position: relative
             top: 130px
             height: 40px
             width: 100px
@@ -480,13 +478,11 @@ body
         bottom: -100%
         visibility: hidden
         transition: visibility 2s, bottom 1s, opacity 1s 0.4s
+
     .errorPopUpShow
         opacity: 1
         bottom: 20px
         visibility: visible
-
-    h1, h3, p
-        color: whitesmoke
 
     //nav section
     .nav
@@ -496,6 +492,7 @@ body
         z-index: 100
         font-family: 'Russo One', sans-serif
         border-bottom: 1px solid #0f0f0f
+
         .menuLabel
             position: relative
             display: grid
@@ -509,6 +506,7 @@ body
 
             .menuLabelBig //only for bigger devices
                 display: none
+
             .menuBars
                 display: grid
                 justify-self: start
@@ -516,6 +514,7 @@ body
                 margin: 0 0 0 5px
                 background: none
                 border: none
+
                 i
                     font-size: 20px
                     color: whitesmoke
@@ -524,11 +523,13 @@ body
                 .animationBars
                     transform: rotateZ(180deg)
                     color: #d5d838
+
             .logo
                 display: grid
                 grid-template-columns: 3fr 1fr
                 justify-self: end
                 margin: 0 5px 0 0
+
                 a
                     font-family: 'Montserrat', sans-serif
                     align-self: center
